<resources>
    <string name="app_name">应用分发器</string>
    <string name="click_install_apk">点击安装目标Apk</string>
    <string name="start_service">获取固定列表</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">通用</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_app_push_server_key">app_push_server_key</string>
    <string name="pref_app_push_server">推送服务接口地址</string>
    <string name="pref_app_push_server_df">https://raw.githubusercontent.com/jepack/ApkDispatcher/master/resources/app_push.json</string>

    <string name="pref_app_cache_server_key">app_cache_server_key</string>
    <string name="pref_app_cache_server">固定安装包列表接口地址</string>
    <string name="pref_app_cache_server_df">https://raw.githubusercontent.com/jepack/ApkDispatcher/master/resources/app_cache.json</string>

    <string name="pref_app_push_install_key">app_push_install_key</string>
    <string name="pref_app_push_install">推送应用自动启动安装</string>
    <string name="pref_app_push_install_desc">在接收到应用推送时，自动下载，并发送安装应用请求</string>

    <string name="pref_heart_beat_interval_key">heart_beat_interval</string>
    <string name="pref_heart_beat_interval">心跳检测间隔</string>
    <string-array name="pref_heart_beat_interval_list_titles">
        <item>1分钟</item>
        <item>2分钟</item>
        <item>5分钟</item>
        <item>1小时</item>
        <item>24小时</item>
    </string-array>
    <string-array name="pref_heart_beat_interval_list_values">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>60</item>
        <item>1440</item>
    </string-array>

    <string name="pref_md5_check_key">pref_md5_check_key</string>
    <string name="pref_md5_check">应用安装MD5校验</string>
    <string name="pref_md5_check_des">是否校验安装包的MD5值，可以在良好的网络状况下开启</string>


</resources>
