<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_md5_check_key"
        android:summary="@string/pref_md5_check_des"
        android:title="@string/pref_md5_check"
        android:visibility="gone"/>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_app_push_server_df"
        android:inputType="textCapWords"
        android:key="@string/pref_app_push_server_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_app_push_server" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_app_cache_server_df"
        android:inputType="textCapWords"
        android:key="@string/pref_app_cache_server_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_app_cache_server" />

    <ListPreference
        android:defaultValue="5"
        android:entries="@array/pref_heart_beat_interval_list_titles"
        android:entryValues="@array/pref_heart_beat_interval_list_values"
        android:key="@string/pref_heart_beat_interval_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_heart_beat_interval"
        />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_app_push_install_key"
        android:summary="@string/pref_app_push_install_desc"
        android:title="@string/pref_app_push_install"
        android:visibility="gone"/>
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference-->
        <!--android:defaultValue="-1"-->
        <!--android:entries="@array/pref_example_list_titles"-->
        <!--android:entryValues="@array/pref_example_list_values"-->
        <!--android:key="example_list"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/pref_title_add_friends_to_messages"-->
        <!--/>-->

</PreferenceScreen>
